--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -6,7 +6,7 @@
           matInput
           type="text"
           name="title"
-          [ngModel] = "post.title"
+          [ngModel] = "post?.title"
           required
           placeholder="Post Title*"
           #title="ngModel">
@@ -19,7 +19,7 @@
           matInput
           rows="6"
           name="content"
-          [ngModel] = "post.content"
+          [ngModel] = "post?.content"
           required
           placeholder="Post Content*"
           #content="ngModel"></textarea>
